--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dynamic Quote Generator</title>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
+
+  <!-- Quote display + next button -->
   <div id="quoteDisplay"></div>
   <button id="newQuote">Show New Quote</button>
 
-  <!-- Quote Form -->
-  <div>
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
-  </div>
+  <!-- Placeholder: form is injected by JS -->
+  <div id="formContainer" style="margin-top: 1rem;"></div>
+
+  <hr/>
+
+  <!-- Import / Export controls -->
+  <section id="ioControls" style="margin-top: 1rem;">
+    <h2>Import / Export Quotes</h2>
+    <button id="exportJson">Export Quotes (JSON)</button>
+    <input
+      type="file"
+      id="importFile"
+      accept=".json"
+      onchange="importFromJsonFile(event)"
+      style="margin-left: .5rem;"
+    />
+  </section>
 
   <script src="script.js"></script>
 </body>
