Stage 3: Implement fetchQuotesFromServer for syncing and conflict resolution

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -39,7 +39,7 @@
 
   <!-- Sync with Server -->
   <h2>Server Sync</h2>
-  <button onclick="syncWithServer()">Sync Now</button>
+  <button onclick="fetchQuotesFromServer()">Sync Now</button>
   <div id="syncStatus"></div>
 
   <script src="script.js"></script>
